--- a/intern/templates/intern/booking_modal.html
+++ b/intern/templates/intern/booking_modal.html
@@ -58,7 +58,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Lukk</button>
-        <button id="edit-button-{{ id }}" type="button" class="btn btn-warning" onClick="showEditBookingModal('{{ booking.id }}')">Endre</button>
+        <button type="button" class="btn btn-warning" onClick="showEditBookingModal('{{ booking.id }}')">Endre</button>
       </div>
     </div>
   </div>
