Tried  adding easy payement, did not work.

--- a/main/templates/main/booking_overview.html
+++ b/main/templates/main/booking_overview.html
@@ -71,9 +71,15 @@
 				<br>
 				<hr>
 				<br>
-				
+					
+				<div id="dibs-complete-checkout"> </div>
+
+				<br>
+
+
 			    <div>
-			    	<button id="payment-button" class="normal-button" >Neste</button>
+			    	<button id="CreatePayment" class="normal-button" type="button" >Create payment</button>
+			    	<!--<button id="payment-button" class="normal-button" >Neste</button> -->
 			    </div>
 			</form>
 		</div>
@@ -87,7 +93,7 @@
 			<input id="t_booking_id" name="t_booking_id" value="{{ t_booking.id }}" type="hidden" />
 			<input id="TOTAL-PRICE" name="total_price" type="hidden" value="{{ t_booking.price }}" type="hidden" />
 			<input id="token" name="token" type="hidden" />
-			<input name="t_booking_JSON" value="{{ t_booking.JSON }}" />
+			<input name="t_booking_JSON" value="{{ t_booking.JSON }}" id="t_booking_serialized" />
 			{{ cabin_search_form }}
 		</form>
 		<form id="add-cabin-form" action="{% url 'show_cabins' %}" method="POST" >
@@ -111,6 +117,7 @@
 {% endblock %}
 
 {% block js %}
-	<script src="https://checkout.stripe.com/checkout.js"></script>
+	<!--<script src="https://checkout.stripe.com/checkout.js"></script>-->
+	<script src="https://test.checkout.dibspayment.eu/v1/checkout.js?v=1"></script>
 	<script src="{% static 'js/booking_overview.js'%}"></script>
 {% endblock %}
